--- a/static/css/base.css
+++ b/static/css/base.css
@@ -7,8 +7,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -19,54 +19,57 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 
 body {
 	line-height: 1;
+	background-color:white;
 }
 
 body {
-	font-family: "URW Palladio L", serif;
-	font-size: 16px; 
-	font-style: normal; 
-	font-variant: normal; 
-	font-weight: 400; 
+	font-family: "Times New Roman", Times, serif;
+	font-size: 16px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
 	line-height: 20px;
 }
 
 .container {
 	display: flex;
+
 }
 
 ul {
-	list-style: square inside;
+	list-style: square;
+}
+li {
+	margin-left: 15px;
 }
 
 #cv {
-	background-color: #FAF7AF;
-	padding-left: 10px;        
+	padding-left: 10px;
   	flex: 3;
+		counter-reset: company;
 }
 
 
 #extra {
 	background-color: black;
-	color: white;         
+	color: white;
   	flex: 1;
   	font-size: 1.2em;
   	padding: 10px;
 }
 
 div[id$='extra'] > a:link, div[id$='extra'] > ul > a:link{
-	color: yellow;
 	text-decoration: : none;
 }
 
 div[id$='extra'] > a:visited, div[id$='extra'] > ul > a:link{
-	color: yellow;
 	text-decoration: : none;
 }
 
@@ -75,14 +78,28 @@ div[id$='extra'] > img {
 	height: 25%;
 }
 
+div.work-item::before{
+	  counter-increment: company;
+    content: counter(company)". ";
+		font-size: 1.1em;
+		font-weight: bold;
+}
+.work-item{
+    counter-reset: projects;
+}
+div.project-item::before{
+	  counter-increment: projects;
+    content: counter(company)"."counter(projects)" ";
+		font-size: 1.1em;
+		font-weight: bold;
+}
+
 #contact {
 	padding: 8px 4px;
-	border: 2px solid black;
 	border-radius: 5px;
 	text-align: center;
 	margin: 0 auto;
 	width: 300px;
-	background-color: #E7DC92;
 }
 
 .contact-name {
@@ -95,47 +112,55 @@ div[id$='extra'] > img {
 	padding-bottom: 10px;
 }
 
+.projecs-section {
+
+}
+.projects-title-section {
+	text-transform: uppercase;
+	font-weight: bold;
+	font-size: 1.1em;
+	padding-top: 8px;
+	padding-bottom: 5px;
+}
+.subtitle-section {
+	font-weight: bold;
+	font-size: 1em;
+	text-decoration: underline;
+}
+
 .title-section {
 	text-transform: uppercase;
 	font-weight: bold;
 	font-size: 1.2em;
 	padding-bottom: 15px;
 }
-
-.header-date {
-	font-weight: bold;
+.item-projects-title{
+	padding-top: 1em;
+	font-size: 1.05em;
+}
+.header-date,.header-company-name{
 	font-size: 1.1em;
 }
 
-.header-company-name, .header-school-name {
+.header-date ,.header-company-name,.header-school-name,.description-education, .item-projects-title {
 	font-weight: bold;
-	padding-left: 10px;
-}
-
-.header-school-location, .header-company-location {
-	color: #545F69;
 }
 
 .section > div {
 	padding-left: 50px;
 }
-
-.education-item, .work-item, .project-item {
+.education-item {
+	padding-bottom: 5px;
+}
+.work-item, .project-item {
 	padding-bottom: 15px;
 }
-
 .description-work {
-	width: 90%;
-	padding-bottom: 10px;
+	padding-bottom: 5px;
+	text-indent: 1.5em;
 }
 
 .technologies-work > span {
-	padding : 0px 10px;
-	margin-left: 5px;
-	border-radius: 6px;
-	border: 1px solid black;
-	background-color: #AC7641;
-	color: white;
 	font-weight: bold;
 }
 
@@ -160,9 +185,7 @@ div[id$='extra'] > img {
 
 .highlighted {
 	border-radius: 5px;
-	background-color: rgba(178, 145, 63, 0.4);
 }
-
 @media (max-width: 900px) {
     .container {
         display: block;
