--- a/static/css/base.css
+++ b/static/css/base.css
@@ -31,11 +31,11 @@ body {
 
 body {
 	font-family: "Times New Roman", Times, serif;
-	font-size: 16px;
+	font-size: small;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 400;
-	line-height: 20px;
+	line-height: normal;
 }
 
 .container {
@@ -62,7 +62,7 @@ li {
 	background-color: black;
 	color: white;
   	flex: 1;
-  	font-size: 1.2em;
+  	font-size: large;
   	padding: 10px;
 }
 
@@ -80,13 +80,13 @@ div[id$='extra'] > img {
 }
 
 table.work-experience {
-	  border: 3px solid black;
+	  border: 2px solid black;
     border-collapse: collapse;
 		table-layout: auto;
 }
 
 tr,th,td {
-	border: 2px solid black;
+	border: 1px solid black;
 }
 tr.work-item-header {
 	text-align:center;
@@ -106,7 +106,7 @@ td.work-accomplishments{
 div.work-item::before{
 	  counter-increment: company;
     content: counter(company)". ";
-		font-size: 1.1em;
+		font-size: large;
 		font-weight: bold;
 }
 .work-item{
@@ -119,14 +119,14 @@ div.work-item::before{
 div.hobby-project-item::before{
 	  counter-increment: hobby-projects;
     content: "H."counter(hobby-projects)" ";
-		font-size: 1.1em;
+		font-size: large;
 		font-weight: bold;
 }
 
 div.project-item::before{
 	  counter-increment: projects;
     content: counter(company)"."counter(projects)" ";
-		font-size: 1.1em;
+		font-size: large;
 		font-weight: bold;
 }
 
@@ -143,7 +143,7 @@ div.project-item::before{
 }
 
 .contact-name {
-	font-size: 1.4em;
+	font-size: large;
 	font-weight: bold;
 }
 
@@ -158,28 +158,28 @@ div.project-item::before{
 .projects-title-section {
 	text-transform: uppercase;
 	font-weight: bold;
-	font-size: 1.1em;
+	font-size: large;
 	padding-top: 8px;
 	padding-bottom: 5px;
 }
 .subtitle-section {
 	font-weight: bold;
-	font-size: 1em;
+	font-size: medium;
 	text-decoration: underline;
 }
 
 .title-section {
 	text-transform: uppercase;
 	font-weight: bold;
-	font-size: 1.2em;
+	font-size: larger;
 	padding-bottom: 10px;
 }
 .item-projects-title{
 	padding-top: 1em;
-	font-size: 1.05em;
+	font-size: large;
 }
 .header-date,.header-company-name{
-	font-size: 1.1em;
+	font-size: medium;
 }
 
 .header-date ,.header-company-name,.header-school-name,.description-education, .item-projects-title, .header-employer, .header-accomplishments, .header-technologies {
@@ -202,6 +202,7 @@ div.project-item::before{
 
 .technologies-work > span {
 	font-weight: bold;
+	font-size: medium;
 }
 
 .skills-items > span {
@@ -213,7 +214,7 @@ div.project-item::before{
 	background-color: #B2913F;
 	color: white;
 	font-weight: bold;
-	font-size: 1.1em;
+	font-size: medium;
 	flex: 0 0 auto;
 }
 
@@ -225,6 +226,7 @@ div.project-item::before{
 
 .highlighted {
 	border-radius: 5px;
+	font-size: medium;
 }
 @media (max-width: 900px) {
     .container {
