--- a/static/css/base.css
+++ b/static/css/base.css
@@ -31,7 +31,7 @@ body {
 
 body {
 	font-family: "Times New Roman", Times, serif;
-	font-size: small;
+	font-size: normal;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 400;
